# bilo-repo

./: .gitignore  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  MONOREPO_SETUP.md  PLATFORM.md  QUICKSTART.md  README.md  SERVICES.md  SERVICE_MAP.md  SHARED_PACKAGES.md  WORKSPACE_SUMMARY.md  docker-compose.yml  ekko_Feedback.md  health-check.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start-services.sh  turbo.json
apps/api-gateway/: Dockerfile  README.md  package.json
apps/api-gateway/src/: app.controller.ts  app.service.ts  main.ts
apps/docs/: package.json
apps/web/: package.json
apps/web-checkout/: .gitignore  README.md  eslint.config.js  package.json  tsconfig.json  vite.config.ts
apps/web-dashboard/: .gitignore  README.md  eslint.config.js  package.json  tsconfig.json
apps/web-dashboard/app/: globals.css  layout.tsx  page.module.css  page.tsx
apps/web-postpurchase/: README.md  eslint.config.js  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web-postpurchase/src/: App.vue  style.css
scripts/: check-env.sh  dev.sh
services/: Dockerfile.nestjs
services/carbon-service/: package.json
services/carbon-service/src/: app.controller.ts  main.ts
services/cs/analytics-service/: Dockerfile  Program.cs  README.md  analytics-service.csproj
services/cs/portfolio-service/: .gitignore  Dockerfile  Program.cs  (+3 more)
services/payments-service/: package.json
services/rust/messaging-service/: .gitignore  Cargo.toml  Dockerfile  README.md  dev.sh  package.json  start.sh
services/rust/messaging-service/src/: main.rs
(+71 files in other folders)
