[package]
name = "messaging-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.7"
bilo-shared-utils = { path = "../../../packages/rust/shared-utils" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
log = "0.4"
uuid = { version = "1.6", features = ["v4"] }

